/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.platform.android.instrumentation;

import "src/devtools/mobileharness/platform/android/instrumentation/result/proto/error.proto";
import "src/devtools/mobileharness/platform/android/instrumentation/result/proto/test_case.proto";
import "src/devtools/mobileharness/platform/android/instrumentation/result/proto/test_status.proto";

option java_package = 'com.google.devtools.mobileharness.platform.android.instrumentation.result.proto';
option java_outer_classname = 'TestResultProto';
option java_multiple_files = true;

// Test result encapsulates the result of a single test run.
message TestResult {
  // Test case for this test run
  TestCase test_case = 1;

  // Indicates the status of the test run and whether it passed, failed or was
  // skipped etc.
  TestStatus test_status = 2;

  // Optional, only applicable if the test_status is a FAILURE OR ERROR
  Error error = 3;
}
